--- a/Html/Site/ClinicaMedica/base.css
+++ b/Html/Site/ClinicaMedica/base.css
@@ -1,31 +1,19 @@
-html, body {
+html,
+body {
     margin: 0;
 }
+
 body {
     background-color: #f1f1f1;
     display: flex;
     justify-content: center;
 }
-a{
+
+a {
     color: aliceblue;
 }
-table  {
-    border: 1px solid gray;
-    -webkit-box-shadow: 10px 8px 21px 10px rgba(0,0,0,0.6); 
-    box-shadow: 10px 8px 21px 10px rgba(0,0,0,0.6);
-}
-table tbody{
-    text-align: center;
-}
-table tbody tr:nth-child(even){
-    background-color: cornflowerblue;
-    
-}
-table thead th{
-    background-color: black;
-    color: #f1f1f1;
-}
-footer{
+
+footer {
     background-color: darkgray;
     top: 0;
     width: 100%;
@@ -36,31 +24,37 @@ footer{
     display: flex;
     margin: 0 auto;
 }
+
 .menu {
     width: 15%;
-    background-color:black;
+    background-color: black;
     display: flex;
     padding: 10px 20px 0px;
 }
-.menu ul{
-    padding:20px;
+
+.menu ul {
+    padding: 20px;
     margin-top: 80px;
 }
-.menu ul li{
+
+.menu ul li {
     margin: 30px 0px;
     list-style: none;
     text-transform: uppercase;
 }
-.menu ul li a:hover{
+
+.menu ul li a:hover {
     color: goldenrod;
     cursor: pointer;
 }
+
 .main {
     display: flex;
     flex-flow: column;
     width: 85%;
 }
-.header{
+
+.header {
     height: 400px;
     min-height: 150px;
 }
@@ -70,28 +64,76 @@ footer{
     min-height: 300px;
     padding: 20px;
 }
+
 .footer {
     display: flex;
-	justify-content: center;
+    justify-content: center;
     min-height: 10px;
 }
 
-.flex-center{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.footer-social-media ul li{
-	margin: 0 10px;
-	list-style: none;
-}
-.footer-social-media ul li a:hover{ 
- 	color:darkmagenta;
-}
-.form{
+.flex-center {
     display: flex;
-    flex-direction:column;
+    justify-content: center;
+    align-items: center;
 }
 
+.footer-social-media ul li {
+    margin: 0 10px;
+    list-style: none;
+}
 
+.footer-social-media ul li a:hover {
+    color: darkmagenta;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+.informacoes {
+    display: flex;
+
+}
+.sobre {
+    width: 100%;
+    color: #2b3a37;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
+}
+.titulo {
+    font-family:'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: 48px;
+    color: #2b3a37;
+    font-weight: 100;
+    margin: 0;
+}
+.resumo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#servicos{
+    font-size: 20px;
+}
+
+#agendamento table {
+    border: 1px solid gray;
+    -webkit-box-shadow: 10px 8px 21px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 10px 8px 21px 10px rgba(0, 0, 0, 0.6);
+}
+
+#agendamento table tbody {
+    text-align: center;
+}
+
+#agendamento table tbody tr:nth-child(even) {
+    background-color: cornflowerblue;
+
+}
+
+#agendamento thead th {
+    background-color: black;
+    color: #f1f1f1;
+}
